src/theme/media.css
/* xs: 320,
sm: 480,
md: 768,
lg: 1150,
xl: 1300, */

#hot-markets .hot-markets__mobile {
    display: none;
}

@media (max-width: 1260px) {
    #market-header,
    #market-creation,
    #hot-markets {
        transform: scale(0.85);
    }

    #market-header {
        padding: 0 20px;
    }

    #market-creation .text-xxxl {
        font-size: 56px;
    }

    #market-creation > div:first-child,
    #market-creation > div:last-child {
        padding: 60px;
    }

    #market-creation > div:last-child img {
        margin-left: 50px !important;
    }

    #hot-markets {
        padding: 20px 80px;
    }
    #explore-markets {
        transform: scale(0.9);
        padding: 0 20px !important;
    }
    #explore-markets .table-filters {
        flex-direction: column;
        flex-flow: column-reverse;
    }
}

@media (max-width: 980px) {
    #market-card:nth-child(3) {
        display: none;
    }
    #market-creation .text-xxxl {
        font-size: 48px;
        line-height: 72px;
    }

    #market-creation > div:last-child img {
        margin-left: 30px !important;
    }

    #market-creation > div:last-child {
        padding: 30px !important;
    }
}

@media (max-width: 880px) {
    #market-creation .text-xxxl {
        font-size: 36px;
        line-height: 72px;
    }

    #market-creation button {
        font-size: 18px !important;
    }

    #market-creation > div:last-child {
        padding: 0 !important;
    }
    #explore-markets {
        transform: scale(0.85);
        padding: 0 !important;
    }
}

@media (max-width: 750px) {
    #market-creation > div:last-child {
        display: none;
    }

    #market-creation button {
        font-size: 18px !important;
    }
    #hot-markets {
        padding: 0px !important;
    }
    #hot-markets .hot-markets__desktop {
        display: none;
    }

    #hot-markets .hot-markets__mobile {
        display: flex;
        align-items: center;
        justify-content: space-between;
    }

    #hot-markets .hot-markets__mobile > img {
        object-fit: contain;
        min-height: 100%;
        min-width: 140px;
    }

    #market-creation > div:last-child {
        padding: 0 !important;
    }
    #explore-markets {
        transform: scale(0.75) !important;
        position: relative;
        top: -140px;
    }
}

@media (max-width: 640px) {
    #explore-markets {
        transform: scale(0.65) !important;
        position: relative;
        top: -200px;
    }
}

@media (max-width: 550px) {
    #explore-markets {
        transform: scale(0.55) !important;
        position: relative;
        top: -250px;
    }
}

@media (max-width: 480px) {
    #hot-markets .text-xxl {
        margin: auto !important;
        max-width: 100vw;
    }

    #hot-markets .hot-markets__mobile {
        transform: scale(0.86);
    }
    #explore-markets {
        transform: scale(0.45) !important;
        position: relative;
        top: -350px;
    }
}

@media (min-height: 800px) {
    #market-creation,
    #hot-markets {
        height: calc((100vh - 100px) / 2);
    }
    #market-creation .text-xxxl {
        font-size: 56px;
    }
}

@media (max-height: 930px) {
    #market-header,
    #market-creation,
    #hot-markets {
        transform: scale(0.85);
    }

    #market-creation .text-xxxl {
        font-size: 56px;
    }

    #market-header {
        padding: 0 20px;
    }

    #hot-markets {
        padding: 20px 80px;
    }
    #explore-markets {
        transform: scale(0.9);
        padding: 0 20px !important;
    }
}

@media (max-height: 836px) {
    #hot-markets {
        padding-top: 0;
    }
}

